cmake_minimum_required(VERSION 3.26)
project("Contenedores-Din-micos")

set(CMAKE_CXX_STANDARD 14)


add_executable(Ejercicio1
        Ejercicio1/main.cpp
)
add_executable(Ejercicio2
        Ejercicio2/main.cpp
)
add_executable(Ejercicio3
        Ejercicio3/main.cpp
)
add_executable(Ejercicio4
        Ejercicio4/main.cpp
)
